--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,46 @@
+body  {
+  margin: 0px;
+}
+
 mark {
   background-color: cyan;
   color: black;
   height: 20;
   width: 30;
+}
+
+
+.container{
+  height: 600px;
+  width: 600px;
+  background-color: palegreen;
+  position: relative;
+}
+
+.red  {
+  height: 200px;
+  width: 200px;
+  background-color: red;
+  position: absolute;
+}
+
+.blue {
+  height: 200px;
+  width: 200px;
+  background-color: blue;
+  position: absolute;
+  left: 200px;
+  top: 390px;
+
+
+}
+
+.yellow {
+  height: 200px;
+  width: 200px;
+  background-color: yellow;
+  position: absolute;
+  left: 400px;
+  top: 590px;
+
 }
