--- a/docs/CSS/style.css
+++ b/docs/CSS/style.css
@@ -1,6 +1,61 @@
+body  {
+  margin: 0px;
+}
+
 mark {
   background-color: cyan;
   color: black;
   height: 20;
   width: 30;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #FFDDEE;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #D885A3;
+}
+
+tbody tr {
+  background-image: url(noise.png);
+}
+
+table {
+  background-color: #EA99D5;
+}
+
+.container{
+  height: 600px;
+  width: 600px;
+  background-color: palegreen;
+  position: relative;
+}
+
+.red  {
+  height: 200px;
+  width: 200px;
+  background-color: red;
+  position: absolute;
+}
+
+.blue {
+  height: 200px;
+  width: 200px;
+  background-color: blue;
+  position: absolute;
+  left: 200px;
+  top: 390px;
+
+
+}
+
+.yellow {
+  height: 200px;
+  width: 200px;
+  background-color: yellow;
+  position: absolute;
+  left: 400px;
+  top: 590px;
+
 }
