--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,8 +5,10 @@ body  {
 mark {
   background-color: cyan;
   color: black;
-  height: 20;
-  width: 30;
+  font-size: smaller;
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
 
 tbody tr:nth-child(odd) {
@@ -23,6 +25,14 @@ tbody tr {
 
 table {
   background-color: #EA99D5;
+}
+
+hr  {
+  background-color: grey;
+  border-top-style: dashed;
+  height: 0;
+  width: 200px;
+  align: left;
 }
 
 .G  {
@@ -58,8 +68,6 @@ table {
   position: absolute;
   left: 200px;
   top: 200px;
-
-
 }
 
 .yellow {
@@ -144,7 +152,6 @@ table {
   height: 200px;
   width: 200px;
   position: absolute;
-
   top: 600px;
 }
 
@@ -152,7 +159,6 @@ table {
   height: 200px;
   width: 200px;
   position: absolute;
-
   top: 800px;
 }
 
@@ -161,7 +167,6 @@ table {
   width: 200px;
   position: absolute;
   left: 600px;
-
 }
 
 .sub-12  {
@@ -170,4 +175,23 @@ table {
   position: absolute;
   top: 800px;
   left: 400px;
+}
+
+label,
+textarea {
+    font-size: .8rem;
+    letter-spacing: 1px;
+}
+textarea {
+    padding: 10px;
+    max-width: 100%;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
 }
