--- a/CSS/style.css
+++ b/CSS/style.css
@@ -273,3 +273,26 @@ label {
   float: left;
   margin-right: 30px;
 }
+
+.main011  {
+  height: 500px;
+  width: 700px;
+  background-color: palegreen;
+  position: relative;
+}
+
+.left  {
+  height: 450px;
+  width: 300px;
+  background-color: #9E9D89;
+  position: absolute;
+}
+
+.right {
+  height: 450px;
+  width: 300px;
+  background-color: #9E9D89;
+  position: absolute;
+  left: 400px;
+  top: 0px;
+}
