--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,297 +1,306 @@
 body  {
-  margin: 0px;
-}
-
-mark {
-  background-color: cyan;
-  color: black;
-  font-size: smaller;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-}
-
-tbody tr:nth-child(odd) {
-  background-color: #FFDDEE;
-}
-
-tbody tr:nth-child(even) {
-  background-color: #D885A3;
-}
-
-tbody tr {
-  background-image: url(noise.png);
-}
-
-table {
-  background-color: #EA99D5;
-}
-
-
-hr  {
+    margin: 0px;
+  }
+  
+  mark {
+    background-color: cyan;
+    color: black;
+    font-size: smaller;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
+  
+  tbody tr:nth-child(odd) {
+    background-color: #FFDDEE;
+  }
+  
+  tbody tr:nth-child(even) {
+    background-color: #D885A3;
+  }
+  
+  tbody tr {
+    background-image: url(noise.png);
+  }
+  
+  table {
+    background-color: #EA99D5;
+  }
+  
+  
+  hr  {
     border-style:ridge;
     border-color: gray;
     border-bottom: none;
     border-width: 1px;
     margin: 0;
-}
+  }
+  
+  p {
+    line-height: 2;
+  }
+  
+  a {
+    line-height: 2;
+    text-decoration: none;
+  }
 
-p {
-  line-height: 2;
-}
+  a:hover {
+    color: darkgreen;
+  }
 
-
-.G  {
-  color: green;
-}
-
-.B  {
-  color: blue;
-}
-
-.O  {
-  color: orange;
-}
-
-.container  {
-  height: 600px;
-  width: 600px;
-  background-color: palegreen;
-  position: relative;
-}
-
-.red  {
-  height: 200px;
-  width: 200px;
-  background-color: red;
-  position: absolute;
-}
-
-.blue {
-  height: 200px;
-  width: 200px;
-  background-color: blue;
-  position: absolute;
-  left: 200px;
-  top: 200px;
-}
-
-.yellow {
-  height: 200px;
-  width: 200px;
-  background-color: yellow;
-  position: absolute;
-  left: 400px;
-  top: 400px;
-}
-
-.main-006  {
-  height: 1000px;
-  width: 1000px;
-  background-color: lightgrey;
-  position: relative;
-}
-
-.sub-1  {
-  height: 300px;
-  width: 300px;
-  position: fixed;
-  top: 200;
-}
-
-.sub-2  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 170px;
-  top: 110px;
-}
-
-.sub-3  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 450px;
-  top: 250px;
-}
-
-.sub-4  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 650px;
-  top: 400px;
-}
-
-.sub-5  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 300px;
-}
-
-.sub-6  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 300px;
-  top: 400px;
-}
-
-.sub-7  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 500px;
-  top: 600px;
-}
-
-.sub-8  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 700px;
-  top: 800px;
-}
-
-.sub-9  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 600px;
-}
-
-.sub-10  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 800px;
-}
-
-.sub-11  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 600px;
-}
-
-.sub-12  {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 800px;
-  left: 400px;
-}
-
-label,
-textarea {
-    font-size: .8rem;
-    letter-spacing: 1px;
-}
-textarea {
-    padding: 10px;
-    max-width: 100%;
-    line-height: 1.5;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px #999;
-}
-
-label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.id {
-  color: #890F0D;
-}
-
-.class  {
-  color: #890F0D;
-}
-
-.p8 {
-  width: 50%;
-}
-
-.main-009 {
-  margin: auto;
-  position: relative;
-}
-
-.img9-1 {
-  width: 15%;
-  float: left;
-  margin-right: 30px;
-  text-align: left;
-}
-
-.img9-2 {
-  width: 15%;
-  float: left;
-  margin-right: 30px;
-}
-
-.img9-3 {
-  width: 15%;
-  float: right;
-  margin-right: 30px;
-}
-
-.img9-4 {
-  width: 15%;
-  float: right;
-  margin-right: 30px;
-}
-
-
-.middle-container {
-  margin: 50px 50px 70px;
-}
-
-.img1 {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
-}
-
-.img2 {
-  width: 25%;
-  float: right;
-  margin-right: 30px;
-}
-
-.img3 {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
-}
-
-.img4 {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
-}
-
-.main011  {
-  height: 500px;
-  width: 700px;
-  background-color: palegreen;
-  position: relative;
-}
-
-.left  {
-  height: 450px;
-  width: 300px;
-  background-color: #9E9D89;
-  position: absolute;
-}
-
-.right {
-  height: 450px;
-  width: 300px;
-  background-color: #9E9D89;
-  position: absolute;
-  left: 400px;
-  top: 0px;
-}
+  .G  {
+    color: green;
+  }
+  
+  .B  {
+    color: blue;
+  }
+  
+  .O  {
+    color: orange;
+  }
+  
+  .container  {
+    height: 600px;
+    width: 600px;
+    background-color: palegreen;
+    position: relative;
+  }
+  
+  .red  {
+    height: 200px;
+    width: 200px;
+    background-color: red;
+    position: absolute;
+  }
+  
+  .blue {
+    height: 200px;
+    width: 200px;
+    background-color: blue;
+    position: absolute;
+    left: 200px;
+    top: 200px;
+  }
+  
+  .yellow {
+    height: 200px;
+    width: 200px;
+    background-color: yellow;
+    position: absolute;
+    left: 400px;
+    top: 400px;
+  }
+  
+  .main-006  {
+    height: 1000px;
+    width: 1000px;
+    background-color: lightgrey;
+    position: relative;
+  }
+  
+  .sub-1  {
+    height: 300px;
+    width: 300px;
+    position: fixed;
+    top: 200;
+  }
+  
+  .sub-2  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 170px;
+    top: 110px;
+  }
+  
+  .sub-3  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 450px;
+    top: 250px;
+  }
+  
+  .sub-4  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 650px;
+    top: 400px;
+  }
+  
+  .sub-5  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 300px;
+  }
+  
+  .sub-6  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 300px;
+    top: 400px;
+  }
+  
+  .sub-7  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 500px;
+    top: 600px;
+  }
+  
+  .sub-8  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 700px;
+    top: 800px;
+  }
+  
+  .sub-9  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 600px;
+  }
+  
+  .sub-10  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 800px;
+  }
+  
+  .sub-11  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 600px;
+  }
+  
+  .sub-12  {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 800px;
+    left: 400px;
+  }
+  
+  label,
+  textarea {
+      font-size: .8rem;
+      letter-spacing: 1px;
+  }
+  textarea {
+      padding: 10px;
+      max-width: 100%;
+      line-height: 1.5;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-shadow: 1px 1px 1px #999;
+  }
+  
+  label {
+      display: block;
+      margin-bottom: 10px;
+  }
+  
+  .id {
+    color: #890F0D;
+  }
+  
+  .class  {
+    color: #890F0D;
+  }
+  
+  .p8 {
+    width: 50%;
+  }
+  
+  .main-009 {
+    margin: auto;
+    position: relative;
+  }
+  
+  .img9-1 {
+    width: 15%;
+    float: left;
+    margin-right: 30px;
+    text-align: left;
+  }
+  
+  .img9-2 {
+    width: 15%;
+    float: left;
+    margin-right: 30px;
+  }
+  
+  .img9-3 {
+    width: 15%;
+    float: right;
+    margin-right: 30px;
+  }
+  
+  .img9-4 {
+    width: 15%;
+    float: right;
+    margin-right: 30px;
+  }
+  
+  
+  .middle-container {
+    margin: 50px 50px 70px;
+  }
+  
+  .img1 {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+  }
+  
+  .img2 {
+    width: 25%;
+    float: right;
+    margin-right: 30px;
+  }
+  
+  .img3 {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+  }
+  
+  .img4 {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+  }
+  
+  .main011  {
+    height: 500px;
+    width: 700px;
+    background-color: palegreen;
+    position: relative;
+  }
+  
+  .left  {
+    height: 450px;
+    width: 300px;
+    background-color: #9E9D89;
+    position: absolute;
+  }
+  
+  .right {
+    height: 450px;
+    width: 300px;
+    background-color: #9E9D89;
+    position: absolute;
+    left: 400px;
+    top: 0px;
+  }
+  
